--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
-project(clipboard VERSION 1.0)
+project(clipboard VERSION 1.1)
 albert_plugin(
     NAME Clipboard
-    DESCRIPTION "A volatile clipboard history"
+    DESCRIPTION "Browsable clipboard history"
     LICENSE BSD-2
     URL https://github.com/albertlauncher/plugins/tree/master/${PROJECT_NAME}
+    QT_DEPENDENCIES Widgets
 )
 
 
