--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,14 @@
-project(clipboard VERSION 1.2)
+project(clipboard VERSION 3.0)
+
 albert_plugin(
-    NAME Clipboard
-    DESCRIPTION "Browsable clipboard history"
-    LICENSE BSD-2
-    URL https://github.com/albertlauncher/plugins/tree/master/${PROJECT_NAME}
-    QT_DEPENDENCIES Widgets
+    SOURCE_FILES
+        ${PROJECT_NAME}.qrc
+        src/plugin.cpp
+        src/plugin.h
+    TS_FILES
+        i18n/${PROJECT_NAME}_de.ts
+    PRIVATE_INCLUDE_DIRECTORIES
+        $<TARGET_PROPERTY:albert::snippets,INTERFACE_INCLUDE_DIRECTORIES>
 )
 
 
